update - first round of comments, + calibration

--- a/p_data_quality.tex
+++ b/p_data_quality.tex
@@ -7,7 +7,7 @@ The detail of machine learning algorithms used to provide predictions will be de
 
 \section{Stakes}
 
-Reliable, up-to-date, accessible, tracable, products data is one of the core value proposition of Alkemics services for retailers.
+Reliable, up-to-date, accessible, tracable, product data is one of the core value proposition of Alkemics services for retailers.
 
 To provide this service, Alkemics teams have put a lot of effort in building:
 
