--- a/p_intro.tex
+++ b/p_intro.tex
@@ -51,7 +51,7 @@ Each service has a domain specific task: data ingestion, data classification, AP
 
 \textbf{User interface}
 User Interface dashboards also call the APIs to make functionalities available to the users (makers and retailers) trough a web browser.
-The front part of the website is coded with React framework.
+The front part of the website is implemented with React framework.
 
 \textbf{APIs and SDKs}
 A set of SDKs are also provided to retailers to allow them to use merchandising functionalities directly embedded in their websites.
