--- a/rapport.tex
+++ b/rapport.tex
@@ -187,6 +187,7 @@ pdftitle=}
 \appendix
 \include{p_logistic_regression_multiclass_multilabel}
 \include{p_classification_metrics}
+\include{p_fasttext_params}
 \cleardoublepage
 
 \bibliographystyle{plain}
